--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>bob esponja</title>
-    <link rel="stylesheet" href="Atividade-responsiva2.0.css">
+    <title>Lana Del Rey</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
