--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <header class="Titulo">
-        <img class="img" src="Lana Del rey1.png" alt="Logo Ma'art" width="250" height="250">
+        <img class="img" src="Lana_Del_rey1.png" alt="Logo Ma'art" width="250" height="250">
         <h1> Lana Del Rey</h1>
     </header>
 
@@ -37,7 +37,7 @@
     </nav>
 
     <article class="bloco1">
-        <img class="img1" src="lana del rey3.webp" alt="Elvis performance" width="170" height="170">
+        <img class="img1" src="lana_del_rey3.webp" alt="Elvis performance" width="170" height="170">
         <h3>Elizabeth Woolridge Grant, conhecida mundialmente como Lana Del Rey, nasceu no dia 21 de junho de 1985, em
             Nova York. Os primeiros nomes artísticos da cantora foram Sparkle Jump Rope Queen e Lizzy Grant and the
             Phenomena.</h3>
@@ -62,7 +62,7 @@
     </aside>
 
     <article class="bloco2">
-        <img class="img2" src="Lana Del rey1.png" alt="Elvis with microphone" width="170" height="170">
+        <img class="img2" src="Lana_Del_rey1.png" alt="Elvis with microphone" width="170" height="170">
         <h3>Del Rey começou a compor com 18 anos e começou a se apresentar em bares de Nova Iorque aos 21 anos. Após
             assinar seu primeiro contrato de gravação com a gravadora 5 Points Records em 2007, lançou seu primeiro
             álbum digital, intitulado Lana Del Ray, em janeiro de 2010, que foi removido após a editora não poder mais
